--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -150,11 +150,13 @@
     font-size: 0.8rem; 
     font-weight: 600; 
     color: #5d4100; 
-    margin-top: 0.5rem; 
+    margin-top: 0; 
+    margin-bottom: 0.5rem; 
     line-height: 1.3;
     overflow: hidden;
     text-overflow: ellipsis;
-    display: -webkit-box;
+  display: -webkit-box;
+  line-clamp: 2; /* Standard property for compatibility */
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     width: 100%;
@@ -298,13 +300,13 @@
                 const avatars = data.avatars;
                 const bust = Date.now();
                 for (const a of avatars) {
-                  // Construct DOM
+                  // Construct DOM with NAME ABOVE the thumbnail
                   const div = document.createElement('div');
                   div.className = 'avatar-option';
                   div.dataset.avatarId = a.id;
                   div.innerHTML = `
-                    <img src="/static/assets/avatars/${a.id}/thumbnail.png?t=${bust}" alt="${a.name}" onerror="this.src='/static/assets/avatars/fallback.png'">
                     <div class="avatar-name">${a.name}</div>
+                    <img src="/static/assets/avatars/${a.id}/thumbnail.png?t=${bust}" alt="${a.name}" onerror="this.src='/static/assets/avatars/fallback.png'">
                   `;
                   grid.appendChild(div);
                 }
