--- a/templates/unified_menu.html
+++ b/templates/unified_menu.html
@@ -1511,7 +1511,7 @@
                     position: relative;
                     z-index: 1;
                 ">
-                    🐝 Welcome, {{ current_user.display_name or 'Friend' }}!
+                    Welcome, {{ current_user.display_name or 'Friend' }}!
                 </div>
                 {% endif %}
                 
